test/invalid/MetodoMainMalFormado/MetodoMainMalFormado.plume
/**
 * 
 * Falta : e () depois de main
 * @author 37060, Roberto Silva
 */
class MetodoMainMalFormado extends Object is
	
	method main -> String is
    	"Hello World"